force-app/main/default/objects/Skill__c/fields/LegacySkillId__c.field-meta.xml
<CustomField>
    <fullName>LegacySkillId__c</fullName>
    <externalId>true</externalId>
    <label>LegacySkillId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>