force-app/main/default/objects/Skill__c/fields/Market_List__c.field-meta.xml
<CustomField>
    <fullName>Market_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market List</label>
    <referenceTo>Market_List__c</referenceTo>
    <relationshipLabel>Skills</relationshipLabel>
    <relationshipName>Skills</relationshipName>
    <type>Lookup</type>
</CustomField>