force-app/main/default/objects/Skill__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipName>SubSkills</relationshipName>
    <type>Lookup</type>
</CustomField>